--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="bg-gray-800 text-gray-100">
+    <main class="container max-w-screen-md mx-auto mt-28 px-5 flex flex-wrap">
       <%= yield %>
     </main>
   </body>
