--- a/app/views/donations/dashboard.html.erb
+++ b/app/views/donations/dashboard.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-4xl mb-8 basis-full">Rails sales dashboard</h1>
+<h1 class="text-4xl mb-8 basis-full">Dashboard</h1>
 
 <div class="flex gap-x-3 text-sm text-gray-400 mb-8">
   <span class="text-white font-semibold cursor-pointer">7 days</span>
