--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,1 +1,22 @@
-<h1> Campaigns </h1>
+<h1 class="text-4xl mb-8 basis-full"> Fundraising campaigns </h1>
+
+<section class="basis-full grid grid-cols-1 md:grid-cols-2 gap-5">
+  <% @campaigns.each do |campaign| %>
+    <div class="p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+      <a href="#">
+        <h5 class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+          <%= campaign.name %>
+        </h5>
+        <h6 class="mb-2">
+          Category: <%= campaign.category %>
+        </h6>
+      </a>
+      <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+        <%= campaign.description %>
+      </p>
+      <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+        Donate
+      </a>
+    </div>
+  <% end %>
+</section>
