done make a donation

--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,1 +1,40 @@
 <h1 class="text-4xl mb-8 basis-full">Make a donation for <%= @donation.campaign.name %></h1>
+
+<% if @donation.errors.any? %>
+  <div class="basis-full flex p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+    <svg class="flex-shrink-0 inline w-4 h-4 me-3 mt-[2px]" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+      <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+    </svg>
+    <span class="sr-only">Danger</span>
+    <div>
+      <span class="font-medium">Ensure that these requirements are met:</span>
+      <ul class="mt-1.5 list-disc list-inside">
+        <% @donation.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+<% end %>
+
+<%= form_with model: @donation, url: campaign_donations_path(@donation.campaign) do |f| %>
+  <div class="mb-5">
+    <%= f.label :donor_name, 'Donor name (auto-generated)', class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' %>
+    <%= f.text_field :donor_name, placeholder: 'What\'s your name?', class: 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+  </div>
+
+  <div class="mb-5">
+    <%= f.label :amount, class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' %>
+    <div class="relative mt-2 rounded-md shadow-sm">
+      <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+        <span class="text-gray-500 sm:text-sm">$</span>
+      </div>
+      <%= f.text_field :amount, placeholder: 'How much do want to donor?', class: 'shadow-sm bg-gray-50 border py-2.5 pl-7 pr-20 border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light' %>
+      <div class="absolute inset-y-0 right-0 flex items-center py-0 text-gray-500 px-2">
+        USD
+      </div>
+    </div>
+  </div>
+
+  <%= f.submit class: 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800' %>
+<% end %>
