--- a/app/views/donations/dashboard.html.erb
+++ b/app/views/donations/dashboard.html.erb
@@ -12,7 +12,7 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
     <div class="p-3 border rounded-xl border-gray-700">
       <div class="font-semibold text-gray-300 text-sm">Total donations</div>
-      <div class="font-semibold text-3xl text-white mb-5">510</div>
+      <div class="font-semibold text-3xl text-white mb-5"><%= @total_donations %></div>
       <div class="text-white font-medium rounded bg-gradient-to-b from-gray-600 to-gray-800 text-xs p-1 inline">
         <span>-></span> 7.4%
       </div>
@@ -20,7 +20,7 @@
 
     <div class="p-3 border rounded-xl border-gray-700">
       <div class="font-semibold text-gray-300 text-sm">Total funds raised</div>
-      <div class="font-semibold text-3xl text-white mb-5">510k</div>
+      <div class="font-semibold text-3xl text-white mb-5"><%= humanized_money_with_symbol(@total_funds_raised / 100.0) %></div>
       <div class="text-white font-medium rounded bg-gradient-to-b from-gray-600 to-gray-800 text-xs p-1 inline">
         <span>-></span> 0.8%
       </div>
