--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -27,7 +27,7 @@
     <%= f.label :amount, class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' %>
     <div class="relative mt-2 rounded-md shadow-sm">
       <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
-        <span class="text-gray-500 sm:text-sm">$</span>
+        <span class="text-gray-500 sm:text-sm"><%= currency_symbol %></span>
       </div>
       <%= f.text_field :amount, placeholder: 'How much do want to donor?', class: 'shadow-sm bg-gray-50 border py-2.5 pl-7 pr-20 border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light' %>
       <div class="absolute inset-y-0 right-0 flex items-center py-0 text-gray-500 px-2">
